--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
