--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "start": "parcel -d lit.codes watch src/index.html",
+    "build": "parcel -d lit.codes build src/index.html",
     "style": "eslint --fix *.js",
-    "deploy": "gh-pages -d dist"
+    "deploy": "cd lit.codes && now --prod"
   },
   "dependencies": {
     "@material-ui/core": "^4.7.2",
@@ -20,6 +20,7 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "now": "^16.7.0"
   }
 }
